[package]
name = "lagraph"
version = "0.1.0"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "Generating nice .dot graphs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/lagraph"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
petgraph = "0.6"
wasm-bindgen = "0.2"
